--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Start Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3890382999"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=404939584" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3977567196"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=32625959" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=344901681" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=321145170" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -91,7 +91,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u1832-2">Krycie dachów papą termozgrzewalną</p>
         </div>
         <div class="clearfix grpelem shared_content" id="u1837-4" data-content-guid="u1837-4_content"><!-- content -->
-         <p id="u1837-2">Oferujemy krycie dachów papą termozgrzewalną od 18zł/m2 z materiałem w cenie (papa wierzchniego krycia- grubość 5,2- porządna papa na wiele lat), docieplanie dachów płaskich styropapą, styropianem lub wełną, izolację fundamentów i posadzek papą, wszystkie warstwy niezbędne pod dachy zielone. Kompletne systemy dachowe z wieloletnią gwarancją.</p>
+         <p id="u1837-2">Oferujemy krycie dachów papą termozgrzewalną, docieplanie dachów płaskich styropapą, styropianem lub wełną, izolację fundamentów i posadzek papą, wszystkie warstwy niezbędne pod dachy zielone. Kompletne systemy dachowe z wieloletnią gwarancją.</p>
         </div>
        </div>
       </div>
