--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3977567196"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=32625959" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=320605005" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=321145170" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=210016028" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -84,8 +84,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
-     <div class="clearfix colelem" id="pu6186"><!-- group -->
-      <div class="clearfix grpelem shared_content" id="u6186" data-content-guid="u6186_content"><!-- group -->
+     <div class="clearfix colelem shared_content" id="pu6186" data-content-guid="pu6186_content"><!-- group -->
+      <div class="clearfix grpelem" id="u6186"><!-- group -->
        <div class="clearfix grpelem" id="u3772"><!-- group -->
         <div class="clearfix grpelem shared_content" id="u1832-4" data-content-guid="u1832-4_content"><!-- content -->
          <p id="u1832-2">Krycie dachów papą termozgrzewalną</p>
@@ -95,7 +95,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
       </div>
-      <div class="grpelem" id="u6178"><!-- simple frame --></div>
+      <div class="grpelem" id="u6178"><!-- simple frame -->
+       <div class="fluid_height_spacer"></div>
+      </div>
      </div>
      <div class="clearfix colelem" id="pu4875"><!-- group -->
       <div class="clearfix grpelem" id="u4875"><!-- column -->
@@ -137,7 +139,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="2009" data-content-above-spacer="2009" data-content-below-spacer="399" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="2009" data-content-above-spacer="1936" data-content-below-spacer="399" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <a class="nonblock nontext MuseLinkActive museBGSize grpelem shared_content" id="u9946" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u9946_content"><!-- content --></a>
     <div class="clearfix grpelem shared_content" id="u12534-21" data-content-guid="u12534-21_content"><!-- content -->
      <p id="u12534-2">ADRES</p>
@@ -202,12 +204,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
-     <div class="clearfix colelem temp_no_id shared_content" data-orig-id="pu6186" data-content-guid="pu6186_content"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u6186_content"><!-- placeholder node --></span>
-      <div class="grpelem temp_no_id" data-orig-id="u6178"><!-- simple frame -->
-       <div class="fluid_height_spacer"></div>
-      </div>
-     </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu6186_content"><!-- placeholder node --></span>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu4875"><!-- group -->
       <div class="clearfix grpelem temp_no_id" data-orig-id="u4875"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
@@ -222,7 +219,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1584" data-content-above-spacer="1583" data-content-below-spacer="364" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1525" data-content-above-spacer="1524" data-content-below-spacer="364" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext MuseLinkActive museBGSize grpelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u12552_content"><!-- placeholder node --></span>
@@ -280,7 +277,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1275" data-content-above-spacer="1275" data-content-below-spacer="483" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1210" data-content-above-spacer="1210" data-content-below-spacer="483" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext MuseLinkActive museBGSize grpelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u12552_content"><!-- placeholder node --></span>
