--- a/kontakt-dach-system.html
+++ b/kontakt-dach-system.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Kontakt Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3977567196"/>
-  <link rel="stylesheet" type="text/css" href="css/kontakt-dach-system.css?crc=4174728391" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3958876311"/>
+  <link rel="stylesheet" type="text/css" href="css/kontakt-dach-system.css?crc=456009115" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt-dach-system.css?crc=4041337673" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4198219831"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt-dach-system.css?crc=409391362" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -37,19 +37,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint active" id="bp_infinity" data-min-width="1367"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem shared_content" id="ppu24376" data-content-guid="ppu24376_content"><!-- column -->
-     <div class="clearfix colelem" id="pu24376"><!-- group -->
+     <div class="clearfix colelem shared_content" id="pu24376" data-content-guid="pu24376_content"><!-- group -->
       <div class="grpelem shared_content" id="u24376" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u24376_content"><!-- content --></div>
+      <a class="nonblock nontext grpelem shared_content" id="u207" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u207_content"><!-- content --></a>
       <div class="clearfix grpelem shared_content" id="u12650" data-content-guid="u12650_content"><!-- group -->
        <a class="nonblock nontext transition clearfix grpelem" id="u235-4" href="index.html"><!-- content --><p id="u235-2">START</p></a>
        <a class="nonblock nontext transition clearfix grpelem" id="u245-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u245-2">USŁUGI</p></a>
        <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u254-4" href="kontakt-dach-system.html"><!-- content --><p id="u254-2">KONTAKT</p></a>
       </div>
-      <a class="nonblock nontext grpelem shared_content" id="u207" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u207_content"><!-- content --></a>
      </div>
      <div class="clearfix colelem shared_content" id="pu12072" data-content-guid="pu12072_content"><!-- group -->
-      <div class="museBGSize grpelem shared_content" id="u12072" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u12072_content"><!-- content --></div>
-      <div class="grpelem shared_content" id="u12073" data-content-guid="u12073_content"><!-- simple frame --></div>
-      <div class="clearfix grpelem shared_content" id="u12071-4" data-content-guid="u12071-4_content"><!-- content -->
+      <div class="museBGSize grpelem" id="u12072" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --></div>
+      <div class="grpelem" id="u12073"><!-- simple frame --></div>
+      <div class="clearfix grpelem" id="u12071-4"><!-- content -->
        <p id="u12071-2">KONTAKT</p>
       </div>
      </div>
@@ -229,8 +229,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix grpelem temp_no_id" data-orig-id="ppu24376"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-orig-id="pu24376"><!-- group -->
       <span class="grpelem placeholder" data-placeholder-for="u24376_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u12650_content"><!-- placeholder node --></span>
       <span class="nonblock nontext grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
+      <span class="clearfix grpelem placeholder" data-placeholder-for="u12650_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12330_content"><!-- placeholder node --></span>
@@ -253,14 +253,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_881" data-min-width="571" data-max-width="881"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="ppu24376"><!-- column -->
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu24376"><!-- group -->
-      <span class="grpelem placeholder" data-placeholder-for="u24376_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u12650_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
-      <span class="museBGSize grpelem placeholder" data-placeholder-for="u12072_content"><!-- placeholder node --></span>
-      <span class="grpelem placeholder" data-placeholder-for="u12073_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u12071-4_content"><!-- placeholder node --></span>
-     </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu24376_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12482-24_content"><!-- placeholder node --></span>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu12330"><!-- group -->
       <span class="grpelem placeholder" data-placeholder-for="u12330_content"><!-- placeholder node --></span>
