--- a/usługi-dach-system.html
+++ b/usługi-dach-system.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Usługi Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3958876311"/>
-  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=196114435" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=413404833"/>
+  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=4035058006" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4198219831"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=3886293821" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=3873246640" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -370,8 +370,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
       <div class="TabbedPanelsContentGroup clearfix colelem" id="u22740"><!-- stack box -->
-       <div class="TabbedPanelsContent clearfix grpelem" id="u22748"><!-- column -->
-        <div class="clearfix colelem shared_content" id="u22753-53" data-content-guid="u22753-53_content"><!-- content -->
+       <div class="TabbedPanelsContent invi clearfix grpelem" id="u22748"><!-- group -->
+        <div class="clearfix grpelem shared_content" id="u22753-53" data-content-guid="u22753-53_content"><!-- content -->
          <p id="u22753-2">Oferujemy krycie dachów papą termozgrzewalną, docieplanie dachów płaskich styropapą, styropianem lub wełną, izolację fundamentów i posadzek papą, wszystkie warstwy niezbędne pod dachy zielone. Kompletne systemy dachowe z wieloletnią gwarancją producenta.</p>
          <p id="u22753-3">&nbsp;</p>
          <p id="u22753-6"><span id="u22753-4">​</span><span class="actAsInlineDiv normal_text" id="u23207"><!-- content --><span class="actAsDiv museBGSize excludeFromNormalFlow" id="u23195" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></span></span></p>
@@ -404,10 +404,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u22753-48">&nbsp;</p>
          <p id="u22753-51"><span id="u22753-49">​</span><span class="actAsInlineDiv normal_text" id="u23300"><!-- content --><span class="actAsDiv museBGSize excludeFromNormalFlow" id="u23288" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></span></span></p>
         </div>
-        <a class="nonblock nontext anim_swing transition shadow clearfix colelem shared_content" id="u24613-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24613-4_content"><!-- content --><p id="u24613-2"><span id="u24613">SPRAWDŹ INNE USŁUGI</span></p></a>
+        <a class="nonblock nontext anim_swing transition shadow clearfix grpelem shared_content" id="u24613-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24613-4_content"><!-- content --><p id="u24613-2"><span id="u24613">SPRAWDŹ INNE USŁUGI</span></p></a>
        </div>
-       <div class="TabbedPanelsContent invi clearfix grpelem" id="u22744"><!-- column -->
-        <div class="clearfix colelem shared_content" id="u22746-18" data-content-guid="u22746-18_content"><!-- content -->
+       <div class="TabbedPanelsContent invi clearfix grpelem" id="u22744"><!-- group -->
+        <div class="clearfix grpelem shared_content" id="u22746-18" data-content-guid="u22746-18_content"><!-- content -->
          <p id="u22746-2">Posiadamy wykształcenie, narzędzia oraz umiejętności praktyczne do wykonania skomplikowanych dachów papowych.</p>
          <p id="u22746-3">&nbsp;</p>
          <p id="u22746-6"><span id="u22746-4">​</span><span class="actAsInlineDiv normal_text" id="u23331"><!-- content --><span class="actAsDiv museBGSize excludeFromNormalFlow" id="u23319" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></span></span></p>
@@ -418,10 +418,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u22746-14">&nbsp;</p>
          <p id="u22746-16">Stawiając na naszą firmę mogą państwo spodziewać się bezawaryjnego użytkowania dachu co najmniej w okresie gwarancji jakiej udziela producent a w praktyce często o wiele dłużej.</p>
         </div>
-        <a class="nonblock nontext anim_swing transition shadow clearfix colelem shared_content" id="u24621-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24621-4_content"><!-- content --><p id="u24621-2"><span id="u24621">SPRAWDŹ INNE USŁUGI</span></p></a>
+        <a class="nonblock nontext anim_swing transition shadow clearfix grpelem shared_content" id="u24621-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24621-4_content"><!-- content --><p id="u24621-2"><span id="u24621">SPRAWDŹ INNE USŁUGI</span></p></a>
        </div>
-       <div class="TabbedPanelsContent invi clearfix grpelem" id="u22754"><!-- column -->
-        <div class="clearfix colelem shared_content" id="u22757-18" data-content-guid="u22757-18_content"><!-- content -->
+       <div class="TabbedPanelsContent invi clearfix grpelem" id="u22754"><!-- group -->
+        <div class="clearfix grpelem shared_content" id="u22757-18" data-content-guid="u22757-18_content"><!-- content -->
          <p id="u22757-2">Dokładamy wszelkich starań aby efekt finalny był zadowalający przede wszystkim pod względem szczelności ale także wizualnym.</p>
          <p id="u22757-3">&nbsp;</p>
          <p id="u22757-6"><span id="u22757-4">​</span><span class="actAsInlineDiv normal_text" id="u23393"><!-- content --><span class="actAsDiv museBGSize excludeFromNormalFlow" id="u23381" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></span></span></p>
@@ -432,9 +432,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u22757-14">&nbsp;</p>
          <p id="u22757-16">Umiejętności to nie wszystko, materiały muszą być dostosowane do warunków atmosferycznych, obciążeń oraz ruchów podłoża na jakie będą narażone.</p>
         </div>
-        <a class="nonblock nontext anim_swing transition shadow clearfix colelem shared_content" id="u24639-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24639-4_content"><!-- content --><p id="u24639-2"><span id="u24639">SPRAWDŹ INNE USŁUGI</span></p></a>
+        <a class="nonblock nontext anim_swing transition shadow clearfix grpelem shared_content" id="u24639-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24639-4_content"><!-- content --><p id="u24639-2"><span id="u24639">SPRAWDŹ INNE USŁUGI</span></p></a>
        </div>
-       <div class="TabbedPanelsContent invi clearfix grpelem" id="u22741"><!-- column -->
+       <div class="TabbedPanelsContent clearfix grpelem" id="u22741"><!-- column -->
         <div class="clearfix colelem shared_content" id="u22742-21" data-content-guid="u22742-21_content"><!-- content -->
          <p id="u22742-2">Posiadamy profesjonalny sprzęt niezbędny do wykonania większości dachów taki jak:</p>
          <p id="u22742-3">&nbsp;</p>
@@ -454,7 +454,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="2584" data-content-above-spacer="2584" data-content-below-spacer="627" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="986" data-content-above-spacer="986" data-content-below-spacer="627" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu9946"><!-- column -->
      <span class="nonblock nontext colelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
@@ -512,19 +512,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
        <div class="TabbedPanelsContentGroup clearfix colelem100 temp_no_id" data-orig-id="u22740"><!-- stack box -->
-        <div class="TabbedPanelsContent clearfix temp_no_id" data-orig-id="u22748"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u22753-53_content"><!-- placeholder node --></span>
-         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24613-4_content"><!-- placeholder node --></span>
+        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22748"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u22753-53_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext anim_swing transition shadow clearfix grpelem placeholder" data-placeholder-for="u24613-4_content"><!-- placeholder node --></span>
         </div>
-        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22744"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u22746-18_content"><!-- placeholder node --></span>
-         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24621-4_content"><!-- placeholder node --></span>
+        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22744"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u22746-18_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext anim_swing transition shadow clearfix grpelem placeholder" data-placeholder-for="u24621-4_content"><!-- placeholder node --></span>
         </div>
-        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22754"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u22757-18_content"><!-- placeholder node --></span>
-         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24639-4_content"><!-- placeholder node --></span>
+        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22754"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u22757-18_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext anim_swing transition shadow clearfix grpelem placeholder" data-placeholder-for="u24639-4_content"><!-- placeholder node --></span>
         </div>
-        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22741"><!-- column -->
+        <div class="TabbedPanelsContent clearfix temp_no_id" data-orig-id="u22741"><!-- column -->
          <span class="clearfix colelem placeholder" data-placeholder-for="u22742-21_content"><!-- placeholder node --></span>
          <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24657-4_content"><!-- placeholder node --></span>
         </div>
@@ -532,7 +532,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1927" data-content-above-spacer="1926" data-content-below-spacer="555" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="794" data-content-above-spacer="793" data-content-below-spacer="555" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu9946"><!-- column -->
      <span class="nonblock nontext colelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
@@ -579,19 +579,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
        <div class="TabbedPanelsContentGroup clearfix colelem100 temp_no_id" data-orig-id="u22740"><!-- stack box -->
-        <div class="TabbedPanelsContent clearfix temp_no_id" data-orig-id="u22748"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u22753-53_content"><!-- placeholder node --></span>
-         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24613-4_content"><!-- placeholder node --></span>
+        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22748"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u22753-53_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext anim_swing transition shadow clearfix grpelem placeholder" data-placeholder-for="u24613-4_content"><!-- placeholder node --></span>
         </div>
-        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22744"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u22746-18_content"><!-- placeholder node --></span>
-         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24621-4_content"><!-- placeholder node --></span>
+        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22744"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u22746-18_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext anim_swing transition shadow clearfix grpelem placeholder" data-placeholder-for="u24621-4_content"><!-- placeholder node --></span>
         </div>
-        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22754"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u22757-18_content"><!-- placeholder node --></span>
-         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24639-4_content"><!-- placeholder node --></span>
+        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22754"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u22757-18_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext anim_swing transition shadow clearfix grpelem placeholder" data-placeholder-for="u24639-4_content"><!-- placeholder node --></span>
         </div>
-        <div class="TabbedPanelsContent invi clearfix temp_no_id" data-orig-id="u22741"><!-- column -->
+        <div class="TabbedPanelsContent clearfix temp_no_id" data-orig-id="u22741"><!-- column -->
          <span class="clearfix colelem placeholder" data-placeholder-for="u22742-21_content"><!-- placeholder node --></span>
          <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24657-4_content"><!-- placeholder node --></span>
         </div>
@@ -599,7 +599,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1802" data-content-above-spacer="1801" data-content-below-spacer="562" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="633" data-content-above-spacer="632" data-content-below-spacer="562" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu9946"><!-- column -->
      <span class="nonblock nontext colelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
@@ -627,7 +627,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('#tab-panelu21401', ['#bp_infinity', '#bp_1366', '#bp_1024'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:0}); });/* #tab-panelu21401 */
-Muse.Utils.initWidget('#tab-panelu22722', ['#bp_881', '#bp_570', '#bp_320'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:0}); });/* #tab-panelu22722 */
+Muse.Utils.initWidget('#tab-panelu22722', ['#bp_881', '#bp_570', '#bp_320'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:3}); });/* #tab-panelu22722 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
